[package]
name = "simple_graph_algorithms"
version = "1.0.0"
edition = "2021"
authors = ["Louis H."]
description  = "A library with the goal of making running graph algorithms as easy as possible."
license = "MIT"
repository = "https://github.com/LMH01/simple_graph_algorithms"
keywords = ["graph", "pathfinding", "dijkstra", "bellman-ford", "easy-to-use"]
categories = ["algorithms"]
readme = "README.md"
exclude = [".github"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
from_instruction = []
serde = ["dep:serde"]

[dependencies]
serde = { version = "1.0", optional = true, features = ["derive"] }

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "algorithm_benchmark"
harness = false